--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,10 @@ services:
       - "7687:7687"
     environment:
       - NEO4J_AUTH=neo4j/password
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_import_file_use__neo4j__config=true
+      - NEO4JLABS_PLUGINS=["apoc", "graph-data-science"]
     volumes:
       - neo4j_paradise_papers-data:/data
       - neo4j_paradise_papers-plugins:/plugins
