--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   neo4j:
-    image: neo4j:latest
+    image: neo4j:4.4-community
     hostname: neo4j
     container_name: neo4j_paradise_papers
     restart: always
